# sagittal_average

./: .gitignore  CITATION.md  LICENSE.md  README.md  brain_average.csv  brain_sample.csv  conf.py  index.rst  pyproject.toml  test_call_command.py  test_sagittal_brain.py
.github/workflows/: docs2gh.yml  pytest.yaml  pytest.yml  python-tests.yml
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
archive/: old_test_sagittal_brain.py
docs/: conf.py  index.rst
docs/content/: brain_averages_docs.rst
docs/how_to/: get_started.rst  index.rst  installation.rst
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
sagittal_average/: command.py  sagittal_brain.py
sagittal_average/tests/: test_sagittal_brain.py
src/: __init__.py  sagittal_brain.py
src/brain_average/: __init__.py  command.py
src/sagittal_average/: command.py  sagittal_brain.py
src/sagittal_average.egg-info/: PKG-INFO  SOURCES.txt
src/sagittal_avg/: sagittal_brain.py
src/sagittal_brain/: command.py  sagittal_brain.py
test/: test_sagittal_brain.py
tests/: test_call_command.py  test_python_file.py  test_sag.py  test_sagittal_average.py  test_sagittal_brain.py
