[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sagittal_average"
version = "0.1.0"
description = "A package to compute sagittal brain averages"
authors = [
    { name = "Your Name", email = "your_email@example.com" }
]
license = { text = "MIT" }
dependencies = ["numpy"]  # 添加依赖

[project.scripts]
sagittal_average_run = "sagittal_average.command:main"
